--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,18 @@ jobs:
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - name: install pnpm
+        run: npm i -g pnpm
+      - name: npm path (ubuntu)
+        if: matrix.platform == 'ubuntu-20.04'
+        run: export PATH=$PATH:`npm prefix --location=global`/bin
+      - name: npm path (windows)
         if: matrix.platform == 'windows-latest'
-        run: |
-          iwr https://get.pnpm.io/install.ps1 -useb | iex
-          Restart-Service powershell
+        run: $env:PATH = $env:PATH + "$(npm prefix --location=global)\bin;"
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y pnpm libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
       - name: install frontend dependencies
         run: pnpm install # change this to npm or pnpm depending on which one you use
       - uses: tauri-apps/tauri-action@v0
